--- a/_data/fall_2016/OdinTheWise.yml
+++ b/_data/fall_2016/OdinTheWise.yml
@@ -1,3 +1,3 @@
-name: Kyle Hagaman:
-emoji: beers:
-introduction: My name is Kyle Hagaman and I am in the Networking Administration program, this will be my last semester for my degree, Im taking this class for my Windows Certification :
+name: Kyle Hagaman
+emoji: beers
+introduction: My name is Kyle Hagaman and I am in the Networking Administration program.
